5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1674_1105.log
== TEST (2019-04-25 11:33:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ")
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == lula):
	x = "Casa Greyjoy"
elif(br == esfolado):
	x = "Casa Bolton"
elif(br == turta):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada: ", x,)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    elif(br == lula):
NameError: name 'lula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:33:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == lula):
	x = "Casa Greyjoy"
elif(br == esfolado):
	x = "Casa Bolton"
elif(br == turta):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada: ", x,)
print(x)
-- EXECUTION TIME:
0.171352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1105/main.py", line 17, in <module>
    elif(br == lula):
NameError: name 'lula' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:34:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == "lula"):
	x = "Casa Greyjoy"
elif(br == "esfolado"):
	x = "Casa Bolton"
elif(br == "turta"):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada: ", x,)
print(x)
-- EXECUTION TIME:
0.131847
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  Casa Greyjoy
Casa Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  Brasao invalido
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  Casa Targaryen
Casa Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == "lula"):
	x = "Casa Greyjoy"
elif(br == "esfolado"):
	x = "Casa Bolton"
elif(br == "turta"):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada: ", x,)
print(x)
-- OUTPUT:
Entrada:  Casa Greyjoy
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == "lula"):
	x = "Casa Greyjoy"
elif(br == "esfolado"):
	x = "Casa Bolton"
elif(br == "turta"):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada: ", br,)
print(x)
-- OUTPUT:
Entrada:  lula
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == "lula"):
	x = "Casa Greyjoy"
elif(br == "esfolado"):
	x = "Casa Bolton"
elif(br == "turta"):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada:", br,)
print(x)
-- OUTPUT:
Entrada: lula
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:34:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == "lula"):
	x = "Casa Greyjoy"
elif(br == "esfolado"):
	x = "Casa Bolton"
elif(br == "turta"):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada:", br,)
print(x)
-- EXECUTION TIME:
0.177589
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa Stark"
elif(br == "leao"):
	x = "Casa Lannister"
elif(br == "veado"):
	x = "Casa Baratheon"
elif(br == "dragao"):
	x = "Casa Targaryen"
elif(br == "rosa"):
	x = "Casa Tyrell"
elif(br == "sol"):
	x = "Casa Martell"
elif(br == "lula"):
	x = "Casa Greyjoy"
elif(br == "esfolado"):
	x = "Casa Bolton"
elif(br == "turta"):
	x = "Casa Tully"
else:
	x = "Brasao invalido"
print("Entrada:", br,)
print(x)
-- OUTPUT:
Entrada: lula
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa: Stark"
elif(br == "leao"):
	x = "Casa: Lannister"
elif(br == "veado"):
	x = "Casa: Baratheon"
elif(br == "dragao"):
	x = "Casa: Targaryen"
elif(br == "rosa"):
	x = "Casa: Tyrell"
elif(br == "sol"):
	x = "Casa: Martell"
elif(br == "lula"):
	x = "Casa: Greyjoy"
elif(br == "esfolado"):
	x = "Casa: Bolton"
elif(br == "turta"):
	x = "Casa: Tully"
else:
	x = "Brasao invalido"
print("Entrada:", br,)
print(x)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa: Stark"
elif(br == "leao"):
	x = "Casa: Lannister"
elif(br == "veado"):
	x = "Casa: Baratheon"
elif(br == "dragao"):
	x = "Casa: Targaryen"
elif(br == "rosa"):
	x = "Casa: Tyrell"
elif(br == "sol"):
	x = "Casa: Martell"
elif(br == "lula"):
	x = "Casa: Greyjoy"
elif(br == "esfolado"):
	x = "Casa: Bolton"
elif(br == "turta"):
	x = "Casa: Tully"
else:
	x = "Brasao invalido"
print("Entrada:", br,)
print(x)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:35:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

br = input("Brasao: ").lower()
if(br == "lobo"):
	x = "Casa: Stark"
elif(br == "leao"):
	x = "Casa: Lannister"
elif(br == "veado"):
	x = "Casa: Baratheon"
elif(br == "dragao"):
	x = "Casa: Targaryen"
elif(br == "rosa"):
	x = "Casa: Tyrell"
elif(br == "sol"):
	x = "Casa: Martell"
elif(br == "lula"):
	x = "Casa: Greyjoy"
elif(br == "esfolado"):
	x = "Casa: Bolton"
elif(br == "turta"):
	x = "Casa: Tully"
else:
	x = "Brasao invalido"
print("Entrada:", br,)
print(x)
-- EXECUTION TIME:
0.185341
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
